# tabim

./: README.md  binding.py  index.html  pyproject.toml  setup.py  tabim-0.1.0-py3-none-any.whl
.github/workflows/: gh-pages.yml  pytest-action.yml
src/tabim/: __init__.py  config.py  main.py  measure.py  note.py  render.py  setup.py  song.py  tabim.py  types.py  utils.py
tests/: conftest.py  test_basic.py  test_beats.py  test_note.py  test_render.py
tests/approved_files/: test_beats.test_parse_song.approved.txt  test_beats.test_parse_song[BasicSustain.gp5].approved.tab  test_beats.test_parse_song[BeautyAndTheBeast.gp5].approved.tab  test_beats.test_parse_song[CarpetOfTheSun.gp5].approved.tab  test_beats.test_parse_song[DifferentNotes.gp5].approved.tab  test_beats.test_parse_song[NoteEffects.gp5].approved.tab  test_beats.test_parse_song[TieNote.gp5].approved.tab  test_beats.test_render_full[BeautyAndTheBeast.gp5-60].approved.tab  test_beats.test_render_full[BeautyAndTheBeast.gp5-80].approved.tab  test_beats.test_render_full[CarpetOfTheSun.gp5-60].approved.tab  test_beats.test_render_full[CarpetOfTheSun.gp5-80].approved.tab  test_beats.test_render_song[BasicSustain.gp5-60].approved.tab  test_beats.test_render_song[BasicSustain.gp5-80].approved.tab  test_beats.test_render_song[BeautyAndTheBeast.gp5-60].approved.tab  test_beats.test_render_song[BeautyAndTheBeast.gp5-80].approved.tab  test_beats.test_render_song[BeautyAndTheBeast.gp5-90].approved.tab  test_beats.test_render_song[BeautyAndTheBeast.gp5].approved.tab  (+17 more)
tests/samples/: Rests.gp5  (+8 more)
web/: binding.py  index.html
